
########################################################################################
#############               生成 Crypto 库文件                           ############## 
########################################################################################
LIST (APPEND crypto_LIB_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/logCrypto.c
    ${CMAKE_CURRENT_SOURCE_DIR}/cryptoTest.c
    )
    

    
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
add_subdirectory( AES )
add_subdirectory( Base64 )
add_subdirectory( DES )
add_subdirectory( MD5 )
add_subdirectory( RSA )
add_subdirectory( SHA1 )
add_subdirectory( SHA256 )
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR} status.")



########################################################################################
#############               设置 crypto 库版本号                         ############## 
########################################################################################
set(crypto_LIB_VERSION     "1.0.0")
set(crypto_LIB_SOVERSION   "1")


    
########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
IF (MODULE_crypto)
    #生成动态库  静态库则 STATIC  
    add_library (cryptolib SHARED      ${crypto_LIB_SRCS})  
    add_library (cryptos STATIC        ${crypto_LIB_SRCS})  
    # 设置版本号，SOVERSION为API版本号
    set_target_properties(cryptolib PROPERTIES 
                            VERSION     ${crypto_LIB_VERSION} 
                            SOVERSION   ${crypto_LIB_SOVERSION} )
ELSE (MODULE_crypto)
    MESSAGE(STATUS "Not Include crypto module.")
ENDIF (MODULE_crypto)




