########################################################################################
#############               生成 aes 库文件                            ############## 
########################################################################################
LIST (APPEND aes_LIB_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/aes.c
    )

    
########################################################################################
#############              添加头文件目录                                 ############## 
########################################################################################
include_directories(  
    ${PROJECT_SOURCE_DIR}/includes  
    ${PROJECT_SOURCE_DIR}/Utils/Crypto
    ${PROJECT_SOURCE_DIR}/Utils/Crypto/AES
)  

########################################################################################
#############               添加 链接库文件目录                           ############## 
########################################################################################
link_directories(  
    /usr/local/lib   
    )  


########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
IF (MODULE_aes)
    #生成动态库  静态库则 STATIC  
    add_library (aeslib SHARED      ${aes_LIB_SRCS})  
    add_library (aess STATIC        ${aes_LIB_SRCS})  
    # 设置版本号，SOVERSION为API版本号
    set_target_properties(aeslib   PROPERTIES VERSION 1.0.0 SOVERSION 1 )
ELSE (MODULE_aes)
    MESSAGE(STATUS "Not Include aes module.")
ENDIF (MODULE_aes)



